--- a/model.ipynb
+++ b/model.ipynb
@@ -952,6 +952,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0000\n",
+      "Precision: 1.0000\n",
+      "Recall (Sensitivity): 1.0000\n",
+      "F1 Score: 1.0000\n",
+      "Specificity: 1.0000\n",
+      "ROC AUC Score: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train XGBoost model\n",
+    "model = XGBRegressor()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Convert regression output to binary (classification)\n",
+    "threshold = y_train.mean()  # Define the threshold as the mean sales quantity\n",
+    "y_test_class = (y_test > threshold).astype(int)\n",
+    "y_pred_class = (y_pred > threshold).astype(int)\n",
+    "\n",
+    "# Calculate evaluation metrics\n",
+    "accuracy = accuracy_score(y_test_class, y_pred_class)\n",
+    "precision = precision_score(y_test_class, y_pred_class)\n",
+    "recall = recall_score(y_test_class, y_pred_class)\n",
+    "f1 = f1_score(y_test_class, y_pred_class)\n",
+    "roc_auc = roc_auc_score(y_test_class, y_pred)\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test_class, y_pred_class).ravel()\n",
+    "specificity = tn / (tn + fp)\n",
+    "\n",
+    "# Print metrics\n",
+    "print(f'Accuracy: {accuracy:.4f}')\n",
+    "print(f'Precision: {precision:.4f}')\n",
+    "print(f'Recall (Sensitivity): {recall:.4f}')\n",
+    "print(f'F1 Score: {f1:.4f}')\n",
+    "print(f'Specificity: {specificity:.4f}')\n",
+    "print(f'ROC AUC Score: {roc_auc:.4f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
