--- a/model.ipynb
+++ b/model.ipynb
@@ -952,14 +952,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 1.0000\n",
+      "Training Accuracy: 1.0000\n",
+      "Testing Accuracy: 1.0000\n",
       "Precision: 1.0000\n",
       "Recall (Sensitivity): 1.0000\n",
       "F1 Score: 1.0000\n",
@@ -971,32 +972,43 @@
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
     "\n",
-    "# Split data into training and testing sets\n",
+    "# Split data into training and testing sets (80% train, 20% test)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train XGBoost model\n",
+    "# Train the XGBoost model\n",
     "model = XGBRegressor()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Predict on the test set\n",
-    "y_pred = model.predict(X_test)\n",
+    "# Predict on training and test sets\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "y_test_pred = model.predict(X_test)\n",
     "\n",
-    "# Convert regression output to binary (classification)\n",
-    "threshold = y_train.mean()  # Define the threshold as the mean sales quantity\n",
+    "# Define threshold for classification (mean of training sales)\n",
+    "threshold = y_train.mean()\n",
+    "\n",
+    "# Convert regression output to binary classification (high sales = 1, low sales = 0)\n",
+    "y_train_class = (y_train > threshold).astype(int)\n",
     "y_test_class = (y_test > threshold).astype(int)\n",
-    "y_pred_class = (y_pred > threshold).astype(int)\n",
+    "y_train_pred_class = (y_train_pred > threshold).astype(int)\n",
+    "y_test_pred_class = (y_test_pred > threshold).astype(int)\n",
     "\n",
-    "# Calculate evaluation metrics\n",
-    "accuracy = accuracy_score(y_test_class, y_pred_class)\n",
-    "precision = precision_score(y_test_class, y_pred_class)\n",
-    "recall = recall_score(y_test_class, y_pred_class)\n",
-    "f1 = f1_score(y_test_class, y_pred_class)\n",
-    "roc_auc = roc_auc_score(y_test_class, y_pred)\n",
-    "tn, fp, fn, tp = confusion_matrix(y_test_class, y_pred_class).ravel()\n",
+    "# Calculate Accuracy for Train and Test sets\n",
+    "train_accuracy = accuracy_score(y_train_class, y_train_pred_class)\n",
+    "test_accuracy = accuracy_score(y_test_class, y_test_pred_class)\n",
+    "\n",
+    "# Print accuracy results\n",
+    "print(f'Training Accuracy: {train_accuracy:.4f}')\n",
+    "print(f'Testing Accuracy: {test_accuracy:.4f}')\n",
+    "\n",
+    "# Other evaluation metrics (for test set)\n",
+    "precision = precision_score(y_test_class, y_test_pred_class)\n",
+    "recall = recall_score(y_test_class, y_test_pred_class)\n",
+    "f1 = f1_score(y_test_class, y_test_pred_class)\n",
+    "roc_auc = roc_auc_score(y_test_class, y_test_pred)\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test_class, y_test_pred_class).ravel()\n",
     "specificity = tn / (tn + fp)\n",
     "\n",
-    "# Print metrics\n",
-    "print(f'Accuracy: {accuracy:.4f}')\n",
+    "# Print other evaluation metrics\n",
     "print(f'Precision: {precision:.4f}')\n",
     "print(f'Recall (Sensitivity): {recall:.4f}')\n",
     "print(f'F1 Score: {f1:.4f}')\n",
